--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -3,6 +3,7 @@
     *ngFor="let clip of (clips$ | async); let i = index"
     (addToBookmark)="modifyClip($event)"
     (removeClip)="removeClip($event)"
+    (translateText)="translateText($event)"
     [clip]="clip"
     [index]="i"
   >
