--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -88,6 +88,11 @@ ion-icon[name='document'] {
   height: 2rem;
   color: var(--ion-color-tertiary-tint);
 }
+ion-icon[name='logo-html5'] {
+  width: 20px;
+  height: 20px;
+  margin-top: 1px;
+}
 
 .material-icons {
   margin-top: 3px;
