--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -1,14 +1,13 @@
 <ion-content>
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
-    (addToBookmark)="modifyClip($event)"
-    (removeClip)="removeClip($event)"
+    (modifyClip)="modifyClip($event)"
     (translateText)="translateText($event)"
     [clip]="clip"
     [index]="i"
   >
   </app-clipboard-item-component>
-  <ion-infinite-scroll threshold="50px" (ionInfinite)="loadData($event)">
+  <ion-infinite-scroll threshold="50px" (ionInfinite)="loadMore($event)">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
       loadingText="Loading more data..."
