--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -2,6 +2,7 @@
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
     (modifyClip)="modifyClip($event)"
+    (removeClip)="removeClip($event)"
     (translateText)="translateText($event)"
     [clip]="clip"
     [index]="i"
