--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -52,6 +52,7 @@
           fill="clear"
           shape="round"
           color="medium"
+          [color]="clip.translationView ? 'secondary' : 'medium'"
           (click)="onTranslate($event)"
         >
           <i class="material-icons">translate</i>
