--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -20,14 +20,19 @@ p {
 }
 
 h3 {
+  font-weight: normal;
   color: var(--text-color--dark);
   border-radius: 3px;
   max-height: 60px;
   font-size: 0.76rem;
 }
 p {
-  color: var(--text-color--light);
+  color: var(--text-color--extra-light);
   font-size: 0.74rem;
+}
+
+h3.translation-view {
+  color: var(--text-color--light);
 }
 
 ion-button {
