--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -51,15 +51,15 @@
       </ion-button>
       <ion-button
         fill="clear"
-        [color]="router.url === '/clipboard/history4' ? 'primary' : 'tertiary'"
-        (click)="navigate('clipboard/history4')"
+        [color]="router.url === '/clipboard/bookmark' ? 'primary' : 'tertiary'"
+        (click)="navigate('clipboard/bookmark')"
       >
         <ion-icon slot="icon-only" name="star"></ion-icon>
       </ion-button>
       <ion-button
         fill="clear"
-        [color]="router.url === '/clipboard/searcher' ? 'primary' : 'tertiary'"
-        (click)="navigate('clipboard/searcher')"
+        [color]="router.url === '/clipboard/finder' ? 'primary' : 'tertiary'"
+        (click)="navigate('clipboard/finder')"
       >
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
