--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,6 +84,7 @@
   --ion-text-color: #020814; // Dedault(?)
   --text-color--dark: #0c162b;
   --text-color--light: #73849a;
+  --text-color--extra-light: hsl(214, 16%, 67%);
   --text-color--light-blue: #448aff;
   --line-rule-color: #edf2f6; //#c1c4cd
   --ion-toolbar-border-color: var(--line-rule-color);
