--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -62,7 +62,7 @@
         <ion-button
           fill="clear"
           shape="round"
-          [color]="clip.starred ? 'primary' : 'medium'"
+          [color]="clip.category === 'starred' ? 'primary' : 'medium'"
           (click)="onAddToBookmarkClick($event)"
         >
           <ion-icon name="star"></ion-icon>
