add bookmark func

--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -22,14 +22,14 @@
   </ion-button>
   <ion-label>
     <h3
-      *ngIf="currentView === 'htmlView'"
+      *ngIf="view === 'htmlView'"
       [innerHTML]="clip.htmlText | sanitizeHtml"
       [title]="clip.htmlText"
     ></h3>
-    <h3 *ngIf="currentView === 'plainView'" [title]="clip.plainText">
+    <h3 *ngIf="view === 'plainView'" [title]="clip.plainText">
       {{ clip.plainView }}
     </h3>
-    <h3 class="translation-view" [title]="clip.translationView">
+    <h3 [title]="clip.translationView">
       {{ clip.translationView }}
     </h3>
     <p>{{ clip.dateFromNow }}</p>
@@ -44,9 +44,9 @@
         <ion-button
           fill="clear"
           shape="round"
-          [color]="currentView === 'plainView' ? 'medium' : 'secondary'"
+          [color]="view === 'htmlView' ? 'secondary' : 'medium'"
           [disabled]="!hasHtmlView"
-          (click)="invertCurrentView($event)"
+          (click)="switchView(view !== 'plainView' ? 'plainView' : 'htmlView')"
         >
           <ion-icon name="logo-html5"></ion-icon>
         </ion-button>
@@ -54,7 +54,7 @@
           fill="clear"
           shape="round"
           color="medium"
-          [color]="clip.translationView ? 'primary' : 'medium'"
+          [color]="view === 'clip.translationView' ? 'primary' : 'medium'"
           (click)="onTranslate($event)"
         >
           <i class="material-icons">translate</i>
