--- a/src/app/pages/clipboard-bookmark/clipboard-bookmark.page.html
+++ b/src/app/pages/clipboard-bookmark/clipboard-bookmark.page.html
@@ -1,5 +1,6 @@
 <ion-header no-border></ion-header>
-<ion-content padding>
+<ion-content>
+  <!--  <ion-content padding> -->
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
     (modifyClip)="modifyClip($event)"
