update db structure

--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -45,7 +45,7 @@
       <ion-button
         fill="clear"
         [color]="router.url === '/clipboard/images' ? 'primary' : 'tertiary'"
-        (click)="navigate('clipboard/history')"
+        (click)="navigate('clipboard/images')"
       >
         <ion-icon slot="icon-only" name="image"></ion-icon>
       </ion-button>
