add clipboard image module

--- a/src/app/pages/clipboard-images/clipboard-images.page.html
+++ b/src/app/pages/clipboard-images/clipboard-images.page.html
@@ -1,9 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>clipboard-images</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header> </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <app-clipboard-image-item></app-clipboard-image-item>
 </ion-content>
