--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -70,7 +70,7 @@
         <ion-button
           fill="clear"
           shape="round"
-          [color]="clip.category === 'starred' ? 'primary' : 'medium'"
+          [color]="clip.categories.includes('starred') ? 'primary' : 'medium'"
           (click)="onAddToBookmarkClick($event)"
         >
           <ion-icon name="star"></ion-icon>
