--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -1,8 +1,7 @@
 <ion-header no-border>
   <ion-toolbar>
     <ion-title>
-      <h4>Infiniti <span> CLIPS</span></h4>
-      <p>clips@infiniti.com</p>
+      <h4><img src="assets/icon/clip.svg" /> Infiniti CLIPS</h4>
     </ion-title>
     <ion-buttons slot="secondary">
       <ion-button color="tertiary">
