--- a/src/app/pages/clipboard-finder/clipboard-finder.page.html
+++ b/src/app/pages/clipboard-finder/clipboard-finder.page.html
@@ -20,7 +20,7 @@
     (translateText)="translateText($event)"
     [clip]="clip"
     [index]="i"
-    [disabled]="{ star: true, translate: true }"
+    [disabled]="{ bookmark: true, translate: true }"
   >
   </app-clipboard-item-component>
   <ion-infinite-scroll threshold="50px" (ionInfinite)="loadMore($event)">
