add settings page

--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>preferences</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-tabs>
+    <ion-tab-bar slot="top">
+      <ion-tab-button tab="system">
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
 
-<ion-content padding>
+      <ion-tab-button tab="system">
+        <ion-label>Settings</ion-label>
+      </ion-tab-button>
 
+      <ion-tab-button tab="system">
+        <ion-label>Settings</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
