add site module

--- a/src/app/pages/clipboard/clipboard.page.scss
+++ b/src/app/pages/clipboard/clipboard.page.scss
@@ -35,7 +35,7 @@ h4 {
     text-align: center;
     vertical-align: middle;
     margin-right: 5px;
-    filter: opacity(50%);
+    filter: brightness(0.65);
   }
 }
 
