--- a/src/app/pages/preferences/preferences.page.html
+++ b/src/app/pages/preferences/preferences.page.html
@@ -1,16 +1,21 @@
 <ion-content>
+  <h4><img src="assets/icon/clip.svg" /> Infiniti CLIPS</h4>
   <ion-tabs>
     <ion-tab-bar slot="top">
       <ion-tab-button tab="system">
-        <ion-label>Home</ion-label>
+        <ion-label position="">HOME</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="system">
-        <ion-label>Settings</ion-label>
+        <ion-label>IAM</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="system">
-        <ion-label>Settings</ion-label>
+        <ion-label>SEARCH</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="system">
+        <ion-label>SYSTEM</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
