--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@
   --ion-color-light-tint: #f5f6f9;
 
   --ion-text-color: #020814; // Dedault(?)
-  --text-color--dark: #0c162b;
+  --text-color--dark: rgb(12, 42, 64);
   --text-color--light: #73849a;
   --text-color--extra-light: hsl(214, 16%, 67%);
   --text-color--light-blue: #448aff;
