--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,1 +1,41 @@
-<ion-content> </ion-content>
+<ion-content>
+  <div class="container header">
+    <div class="main">
+      <h2>A beautiful cross platform clipboard app for everyone</h2>
+      <h4>
+        Infiniti Clips is a free, open source hybrid clipboard application
+        available for Windows and macOS.
+      </h4>
+      <div class="container logo">
+        <ion-item lines="none">
+          <ion-icon name="logo-windows"></ion-icon>
+        </ion-item>
+        <ion-item lines="none">
+          <ion-icon name="logo-apple"></ion-icon>
+        </ion-item>
+      </div>
+      <h4>
+        Powered by Ionic - Angular 7.
+      </h4>
+      <div class="container logo">
+        <ion-item lines="none">
+          <ion-icon name="logo-angular"></ion-icon>
+        </ion-item>
+      </div>
+    </div>
+    <div class="item right">
+      <img src="assets/images/app-main.png" />
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="light-theme">
+    <mat-toolbar class="nav-bar footer">
+      <img src="assets/icon/clip.svg" />
+      <button mat-button color="primary">Infiniti Open Source</button>
+      <div>Released under MIT License | Copyright @ 2019</div>
+      <span class="spacer"></span>
+      <button mat-button disabled>About</button>
+    </mat-toolbar>
+  </div>
+</ion-content>
