--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,7 +19,7 @@
   --ion-color-secondary-tint: rgb(228, 83, 107);
 
   /** tertiary **/
-  --ion-color-tertiary: #373d59;
+  --ion-color-tertiary: rgb(54, 60, 88);
   --ion-color-tertiary-rgb: 55, 61, 89;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
@@ -82,7 +82,7 @@
   --ion-color-light-tint: #f5f6f9;
 
   --ion-text-color: #020814; // Dedault(?)
-  --text-color--dark: rgb(12, 42, 64);
+  --text-color--dark: rgb(16, 32, 64);
   --text-color--light: #73849a;
   --text-color--extra-light: hsl(214, 16%, 67%);
   --text-color--light-blue: #448aff;
