add site features page

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="container header">
-    <div class="main">
-      <h2>A beautiful cross platform clipboard app for everyone</h2>
+    <div class="content">
+      <h2>the clipboard app designed for you</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
@@ -23,7 +23,7 @@
         </ion-item>
       </div>
     </div>
-    <div class="item right">
+    <div class="img right">
       <img src="assets/images/app-main.png" />
     </div>
   </div>
@@ -31,11 +31,12 @@
   <!-- Footer -->
   <div class="light-theme">
     <mat-toolbar class="nav-bar footer">
-      <img src="assets/icon/clip.svg" />
-      <button mat-button color="primary">Infiniti Open Source</button>
-      <div>Released under MIT License | Copyright @ 2019</div>
+      <img src="assets/icon/infiniti-opensource.svg" />
+    </mat-toolbar>
+    <mat-toolbar class="nav-bar footer">
+      <p>Released under MIT License | Copyright @ 2019</p>
       <span class="spacer"></span>
-      <button mat-button disabled>About</button>
+      <p>About</p>
     </mat-toolbar>
   </div>
 </ion-content>
