--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -81,8 +81,8 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  --ion-text-color: #020814; // Dedault(?)
-  --text-color--dark: rgb(16, 32, 64);
+  --ion-text-color: #020814; // Default(?)
+  --text-color--dark: rgb(16, 32, 64); // Maybe overriding some style -- 2019/03/10
   --text-color--light: #73849a;
   --text-color--extra-light: hsl(214, 16%, 67%);
   --text-color--light-blue: #448aff;
