--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -1,5 +1,5 @@
 .nav-bar {
-  color: var(--text-color--dark);
+  color: var(--ion-color-tertiary);
   background-color: white;
   box-shadow: 0 0 3px 0px rgba(0, 5, 25, 0.09);
   h2 {
