--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -54,7 +54,7 @@ h2 {
   text-transform: uppercase;
   font-size: 2.6rem;
   font-weight: 900;
-  color: var(--text-color--dark);
+  color: var(--ion-color-tertiary);
   text-align: center;
 }
 h4 {
